deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: rslimit
  name: consumer-deploy
spec:
  replicas: 5
  selector:
    matchLabels: 
      app: simpleflask
      role: consumer
  minReadySeconds: 15
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
      maxSurge: 1
  template:
    metadata:
      labels:
        app: simpleflask
        role: consumer
    spec:
      containers:
      - name: simpleflask-container
        image: imarinov77/simpleflask:latest
        ports:
        - containerPort: 80
