hw4.2-ss.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: facts-be
spec:
  selector:
    matchLabels:
      app: facts-be
  serviceName: facts-be
  replicas: 3
  # POD template
  template:
    metadata:
      labels:
        app: facts-be
    spec:
      terminationGracePeriodSeconds: 10
      containers:
      - name: facts-be
        image: shekeriev/k8s-facts
        ports:
        - name: facts-be
          containerPort: 5000
        volumeMounts:
        - name: facts-data
          mountPath: /data
  # VolumeClaim template
  volumeClaimTemplates:
  - metadata:
      name: facts-data
    spec:
      accessModes: [ "ReadWriteOnce" ]
      resources:
        requests:
          storage: 2Gi
