hw4.2-svc-be.yaml
apiVersion: v1
kind: Service
metadata:
  name: svc-be
spec:
  type: ClusterIP
  ports:
  - targetPort: 5000
    port: 5000
  selector:
    app: facts-be
