hw4.2-svc-fe.yaml
apiVersion: v1
kind: Service
metadata:
  name: svc-fe
spec:
  selector:
    app: facts-fe
  type: NodePort
  ports:
  - port: 5000
    nodePort: 30001
    protocol: TCP
