hw4.2-svcss.yaml
apiVersion: v1
kind: Service
metadata:
  name: facts
spec:
  selector:
    app: facts-be
  clusterIP: None
  ports:
  - port: 5000
    protocol: TCP
