svc-ingress.yaml
apiVersion: v1
kind: Service
metadata:
  name: web-one
  labels:
    name: web-one
spec:
  type: ClusterIP
  selector:
    app: web-one
  ports:
    - port: 80
      targetPort: 80
